--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
-          cache-dependency-path: chatbot-widget/package-lock.json
+          cache-dependency-path: 'chatbot-widget/package-lock.json'
 
       - name: Install dependencies
         run: npm ci
@@ -47,4 +47,4 @@ jobs:
       - name: Upload Coverage
         uses: codecov/codecov-action@v3
         with:
-          file: chatbot-widget/coverage/lcov.info 
+          file: coverage/lcov.info 
