--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -37,6 +37,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
+      - name: Verify package-lock.json is up to date
+        run: |
+          npm install --package-lock-only
+          git diff --exit-code package-lock.json
+
       - name: Install dependencies
         run: npm ci --legacy-peer-deps || npm install --legacy-peer-deps
 
