--- a/chatbot-widget/package.json
+++ b/chatbot-widget/package.json
@@ -25,7 +25,9 @@
     "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(@radix-ui)/)'",
     "eject": "react-scripts eject",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "bundlewatch": "bundlewatch",
+    "lighthouse": "lhci autorun"
   },
   "eslintConfig": {
     "extends": [
@@ -53,9 +55,11 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.21",
+    "bundlewatch": "^0.3.3",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "@lhci/cli": "^0.11.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17"
   }
