--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -29,6 +29,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
+          # Check out pull request HEAD commit instead of merge commit
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -47,10 +49,12 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+          git checkout ${{ github.head_ref }}
           git add package-lock.json
           git commit -m "Update package-lock.json to match package.json [skip ci]"
-          git push
-          echo "::warning::package-lock.json was out of sync and has been updated. Please pull the latest changes."
+          git push origin HEAD:${{ github.head_ref }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   lint-type-check:
     name: Lint & Type Check
