--- a/chatbot-widget/package.json
+++ b/chatbot-widget/package.json
@@ -7,8 +7,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.0",
-    "@types/react": "^18.0.38",
-    "@types/react-dom": "^18.0.11",
+    "@types/react-dom": "^18.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.344.0",
@@ -24,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(@radix-ui)/)'",
     "eject": "react-scripts eject",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext ts,tsx",
     "typecheck": "tsc --noEmit",
     "bundlewatch": "bundlewatch",
     "lighthouse": "lhci autorun"
@@ -51,15 +50,14 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/react": "^19.0.12",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.21",
-    "bundlewatch": "^0.3.3",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "@lhci/cli": "^0.11.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17"
   }
